...
                            <constraint firstItem="vYN-5M-awE" firstAttribute="bottom" secondItem="dl2-Hs-8PH" secondAttribute="bottom" id="k33-5w-Pqt"/>
                            <constraint firstAttribute="leading" secondItem="vYN-5M-awE" secondAttribute="leading" id="nEW-Yf-us5"/>
                            <constraint firstItem="rGL-tq-B12" firstAttribute="top" secondItem="rRM-18-dYh" secondAttribute="bottomMargin" id="w5u-gF-Okq"/>
                        </constraints>
                    </view>
                    <toolbarItems>
                        <barButtonItem title="Edit" id="Ksa-Pd-Mv5">
                            <connections>
                                <action selector="onEditPressed:" destination="aq5-lx-Pms" id="u4l-M0-guB"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Bookmarks" id="oMv-60-GGW">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="RuZ-zV-tu8">
                            <connections>
                                <action selector="onDonePressed:" destination="aq5-lx-Pms" id="7U4-5t-4Re"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
...
                                    </constraints>
                                </tableViewCellContentView>
                                <color key="backgroundColor" name="surface"/>
                                <connections>
                                    <outlet property="folderImageView" destination="8qY-sA-7P1" id="neJ-nR-FKK"/>
                                    <outlet property="leadingPaddingConstraint" destination="7fS-iW-BEh" id="uZ7-wF-WMV"/>
                                    <outlet property="title" destination="K2O-E5-pyF" id="1j8-kf-ZCy"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookmarksTextFieldCell" id="fZI-vz-Ikc" customClass="BookmarksTextFieldCell" customModule="DuckDuckGo" customModuleProvider="target">
                                <rect key="frame" x="16" y="99" width="343" height="44.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fZI-vz-Ikc" id="MfZ-X5-f9l">
...
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="URL" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YqY-sP-hhb">
                                            <rect key="frame" x="88" y="44" width="243" height="44"/>
                                            <constraints>
                                                <constraint firstAttribute="height" priority="999" constant="44" id="tZz-vQ-lla"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" textContentType="url"/>
                                        </textField>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rT4-Yr-P8D">
                                            <rect key="frame" x="88" y="0.0" width="243" height="44"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="44" id="hfT-Mz-7EA"/>
                                            </constraints>
...
