...
        delegate?.autofillLoginPromptViewModelDidRequestExpansion(self)
    }
}

internal extension AutofillLoginPromptViewModel {
    static var preview: AutofillLoginPromptViewModel {
        let domain = "example.com"
        let account = SecureVaultModels.WebsiteAccount(title: "Title", username: "test@duck.com", domain: domain)
        let accountMatches = AccountMatches(perfectMatches: [account], partialMatches: [:])
        return AutofillLoginPromptViewModel(accounts: accountMatches, domain: domain, isExpanded: false)
    }
}

