...
                                        <rect key="frame" x="0.0" y="488" width="414" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lxe-cb-Ocp" id="yJy-q8-10T">
                                            <rect key="frame" x="0.0" y="0.0" width="383.5" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Sync Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2ek-Np-pS5">
                                                    <rect key="frame" x="20" y="0.0" width="355.5" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        <rect key="frame" x="0.0" y="885.5" width="414" height="44.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AgK-xW-xB6" id="onY-PV-AQp">
                                            <rect key="frame" x="0.0" y="0.0" width="382" height="44.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                        <listContentConfiguration key="contentConfiguration" text="Internal User State" secondaryText=""/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" tag="666" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Lqc-aq-UoJ">
                                        <rect key="frame" x="0.0" y="930" width="414" height="44.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lqc-aq-UoJ" id="SOZ-8q-BYe">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44.5"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="aoH-Pp-DbP" id="jZu-7J-DJw"/>
                            <outlet property="delegate" destination="aoH-Pp-DbP" id="P1d-Hi-SPe"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Debug" id="VXG-Ea-SIb">
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="zus-np-Qbu">
                            <connections>
                                <action selector="onShareTapped" destination="aoH-Pp-DbP" id="9Tm-F7-bfq"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
