...
        .frame(maxWidth: .infinity)
        .toolbar {
            ToolbarItem(placement: .topBarLeading) {
                Button(role: .cancel) {
                    dismiss()
                } label: {
                    Text(verbatim: "Cancel")
                }
            }
        }
        .tintIfAvailable(Color(designSystemColor: .textPrimary))
        .onAppear {
            isFocused = true
...
