...
                                        <rect key="frame" x="16" y="355.5" width="264" height="38"/>
                                        <color key="backgroundColor" red="0.4039215686" green="0.56078431370000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="38" id="Azr-V1-kLw"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <state key="normal" title="Got It">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <attributedString key="userComments">
                                            <fragment content="In a sense of &quot;I understand&quot;"/>
                                        </attributedString>
                                        <connections>
...
