...
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgy-75-OvJ">
                                <rect key="frame" x="964" y="92" width="36" height="32"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Hide"/>
                                <connections>
                                    <action selector="onTapHide" destination="yGQ-WA-daz" eventType="touchUpInside" id="5j1-af-Neq"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="yHc-FK-kfn"/>
...
