...
        } else {
            emailAccessoryText.text = nil
        }
    }

    private func pushEmailProtectionViewController() {
        let storyboard = UIStoryboard(name: "Settings", bundle: Bundle.main)
        let viewController = storyboard.instantiateViewController(identifier: "EmailProtectionViewController")
        navigationController?.pushViewController(viewController, animated: true)
    }

    private func pushEmailWaitlistViewController() {
        let storyboard = UIStoryboard(name: "Settings", bundle: Bundle.main)
...
