...
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="onFirePressed" destination="C1X-Zd-UbA" id="bcZ-Ag-8pP"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="d6z-g6-mo7"/>
                                    <barButtonItem title="Tab Switcher" image="Add-24" id="K7o-WL-SC5" userLabel="Tabs Button">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Tabs"/>
                                        </userDefinedRuntimeAttributes>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="hL8-s1-UNT"/>
                                    <barButtonItem title="Bookmarks" image="Book-24" id="M7u-mw-fly">
...
