appId: com.duckduckgo.mobile.ios
---

- tapOn:
    id: searchEntry
- inputText: localhost
- pressKey: Enter
- tapOn: Browsing Menu
- tapOn: Add Bookmark
- tapOn: Edit
- tapOn:
    id: title
- inputText: ${TITLE}
- tapOn:
    id: url
- inputText: ${URL}
- tapOn: Save
- tapOn: Done
- tapOn: Browsing Menu
- tapOn: Bookmarks
- tapOn: ${TITLE}