appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
    element: Passwords
- tapOn: Passwords
- tapOn: Add 24
- tapOn: Title
- inputText: My Personal Website
- tapOn: username@example.com
- inputText: me@mypersonalwebsite.com
- tapOn: example.com
- inputText: mypersonalwebsite.com
- tapOn: Save
- tapOn: Passwords
- tapOn: Settings
- tapOn: Done