# onboarding_browsing.yaml

appId: com.duckduckgo.mobile.ios
---

- runFlow:
    when:
      visible: "Got It"
    commands:
        - assertVisible: "Hide"
        - tapOn: "Hide"
        - assertVisible: "Hide Tips Forever"
        - tapOn: "Hide Tips Forever"
