# copy_recovery_code_from_settings.yaml

appId: com.duckduckgo.mobile.ios
---

- scroll
- scroll
- scroll
- assertVisible: All debug options
- tapOn: All debug options
- tapOn: Sync Info
- tapOn: Paste and Copy Recovery Code
- inputText: ${CODE}
- tapOn: Copy
- tapOn: Debug
- tapOn: Settings